--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,30 @@
 <%- include('./parts/header') %>
 
 <div class="container">
+
+  <nav class="navbar navbar-expand-lg navbar-light">
+    <a class="navbar-brand" href="/">`${ Wellington Pinho }`</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Alterna navegação">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="/">Home <span class="sr-only">(Página atual)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://github.com/wellpinho">Github</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.linkedin.com/in/wellpinho/">Linkedin</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://wellpinho.com.br">Portfólio</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
   <header class="text-center">
     <h1>PERGUNTAS</h1>
     <small>& Respostas</small>
@@ -10,18 +34,14 @@
     <fieldset>
       <legend>Faça uma pergunta:</legend>
       <div class="form-group">
-        <label for="fname">First name:</label>
-        <input class="form-control" type="text" id="fname" name="fname"><br>
-        <label for="lname">Last name:</label>
-        <input class="form-control" type="text" id="lname" name="lname"><br>
-        <label for="email">Email:</label>
-        <input class="form-control" type="email" id="email" name="email"><br>
-        <label for="birthday">Birthday:</label>
-        <input class="form-control" type="date" id="birthday" name="birthday"><br>
-        <input class="btn btn-primary" type="submit" value="Submit">
+        <label for="fname">Título:</label>
+        <input class="form-control" type="text" id="name" name="name"><br>
+        <label for="lname">Descrição:</label>
+        <textarea class="form-control" type="text" id="name" name="name"></textarea><br>
+        <input class="btn btn-success" type="submit" value="Perguntar">
       </div>
     </fieldset>
   </form>
 </div>
 
-<%- include('./parts/header') %>
+<%- include('./parts/footer') %>
