--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
     <small>& Respostas</small>
   </header>
 
-  <form action="/action_page.php">
+  <form action="/perguntar" method="POST">
     <fieldset>
       <legend>Faça uma pergunta:</legend>
       <div class="form-group">
