--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,44 +1,15 @@
 <%- include('./parts/header') %>
 
-<div class="container">
-
-  <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" href="/">`${ Wellington Pinho }`</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Alterna navegação">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="/">Home <span class="sr-only">(Página atual)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://github.com/wellpinho">Github</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://www.linkedin.com/in/wellpinho/">Linkedin</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://wellpinho.com.br">Portfólio</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-
-  <header class="text-center">
-    <h1>PERGUNTAS</h1>
-    <small>& Respostas</small>
-  </header>
-
-  <form action="/perguntar" method="POST">
+  <form action="/pergunta" method="POST">
     <fieldset>
       <legend>Faça uma pergunta:</legend>
       <div class="form-group">
         <label for="fname">Título:</label>
-        <input class="form-control" type="text" id="name" name="name"><br>
+        <input class="form-control" type="text" id="name" name="titulo"><br>
         <label for="lname">Descrição:</label>
-        <textarea class="form-control" type="text" id="name" name="name"></textarea><br>
+        <textarea class="form-control" type="text" id="name" name="description"></textarea><br>
         <input class="btn btn-success" type="submit" value="Perguntar">
+        <a href="/pergunta" class="btn btn-outline-secondary">ver perguntas</a>
       </div>
     </fieldset>
   </form>
