--- a/views/parts/header.ejs
+++ b/views/parts/header.ejs
@@ -9,3 +9,34 @@
   <link rel="stylesheet" href="/css/app.css">
 </head>
 <body>
+
+  
+<div class="container">
+
+  <nav class="navbar navbar-expand-lg navbar-light">
+    <a class="navbar-brand" href="/">`${ Wellington Pinho }`</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Alterna navegação">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="/">Home <span class="sr-only">(Página atual)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://github.com/wellpinho">Github</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.linkedin.com/in/wellpinho/">Linkedin</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://wellpinho.com.br">Portfólio</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <header class="text-center">
+    <h1>PERGUNTAS</h1>
+    <small>& Respostas</small>
+  </header>
